--- a/package.json
+++ b/package.json
@@ -1,13 +1,37 @@
 {
   "dependencies": {
-    "expo": "^53.0.4",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.1",
-    "react-native-web": "^0.20.0"
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-picker/picker": "^2.11.1",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.7",
+    "expo": "54.0.6",
+    "expo-checkbox": "~5.0.7",
+    "expo-haptics": "~15.0.7",
+    "expo-location": "~19.0.7",
+    "expo-notifications": "~0.32.11",
+    "firebase": "^12.1.0",
+    "jest": "~29.7.0",
+    "jest-expo": "~54.0.11",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-confetti-cannon": "^1.5.2",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-maps": "1.20.1",
+    "react-native-modal": "^14.0.0-rc.1",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3"
+    "@babel/core": "^7.28.4",
+    "@babel/preset-env": "^7.28.3",
+    "@testing-library/react-native": "^13.3.3",
+    "babel-jest": "^30.1.2",
+    "jest": "~29.7.0",
+    "react-test-renderer": "^19.0.0"
   },
   "name": "safebuddy",
   "version": "1.0.0",
@@ -16,6 +40,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   }
 }
